exports[`Play page renders as before with cards 1`] = `
<Unknown>
  <div
    className="pile">
    <Unknown />
  </div>
</Unknown>
`;

exports[`Play page renders as before without cards 1`] = `
<Unknown>
  <div
    className="pile">
    <p
      className="no-cards-message">
      No more cards
    </p>
  </div>
</Unknown>
`;

exports[`test Hand renders as before 1`] = `
<Unknown>
  <div
    className="pile">
    <p
      className="no-cards-message">
      No more cards
    </p>
  </div>
</Unknown>
`;

exports[`test PlayCardButton renders as before 1`] = `
<Unknown>
  <div
    className="pile">
    <p
      className="no-cards-message">
      No more cards
    </p>
  </div>
</Unknown>
`;
